# typesketch-python

./: .gitignore  .pre-commit-config.yaml  AI_CURATOR_RECIPE.md  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  mypy.ini  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/adr/: ADR-0000-record-architecture-decisions.md  ADR-0001-name-and-scope.md  ADR-0002-language-and-packaging.md  ADR-0003-heuristics.md  ADR-0010-ai-curation-policy.md  README.md  TEMPLATE.md
docs/curation/: README.md
examples/: poi.json  run-openlibrary-api.sh  run-poi_json.sh  run.sh  typesketch
scripts/: check_adr_index.py  check_prints.py  fast_tests.sh  lint_adrs.py
src/typesketch/: __init__.py  cli.py  detectors.py  emit_yaml.py  infer.py
tests/: test_cli_smoke.py  test_emit_yaml.py
